<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Splash Screen-->
    <string name="contentDescriptionLogo">Logo</string>
    <!--Main Activity-->
    <string name="app_name">Listd</string>
    <string name="main_heading">Hi, Lucas!</string>
    <string name="current_date">Current date</string>
    <string name="todays_tasks">Today\'s Tasks</string>
    <string name="uncompleted_tasks"># of uncompleted tasks</string>
    <string name="task_title">Task title</string>
    <string name="date_and_time">Date and Time</string>
    <string name="task_status">Task status</string>
    <!--Add Task-->
    <string name="add_task_label">Title *</string>
    <string name="task_hint_title">Task title</string>
    <string name="add_task_info_label">Description *</string>
    <string name="task_hint_info">Task info</string>
    <string name="new_task">Create new task</string>
    <string name="add_task">Create task</string>
    <!--Edit Task-->
    <string name="edit_task">Update task</string>
    <string name="edit_task_title">Task title</string>
    <string name="edit_task_label">Title</string>
    <string name="edit_task_title_input">Edit title</string>
    <string name="edit_task_info_label">Description</string>
    <string name="edit_task_info">Edit info</string>
    <string name="completed">Completed</string>
    <string name="Uncompleted">Not completed</string>
    <string name="delete_task">Delete</string>
    <string name="update_task">Update</string>
    <string name="main_menu">Main Menu</string>
    <!--Menu options-->
    <string name="menu_item_0">Home</string>
    <string name="menu_item_1">Completed tasks</string>
    <string name="menu_item_2">Settings</string>
    <string name="menu_item_3">About</string>
    <!--Settings (Email)-->
    <string name="settings_h1">Settings</string>
    <string name="enter_email_msg">Enter your email to enable email notifications when the completed tasks list gets cleared.</string>
    <string name="settings_email_label">Email</string>
    <string name="hint_settings_email">Email</string>
    <string name="button_enable">Enable notifications</string>
    <!--Completed tasks-->
    <string name="completed_tasks_h1">Completed tasks</string>
    <string name="delete_completed_tasks">Delete all completed tasks</string>
    <!--About-->
    <string name="about_h1">About</string>
    <string name="about_text_label">About Listd</string>
    <string name="about_paragraph">Listd is a free, powerful and visually stunning app that let\'s you save your daily tasks. Get started right away, quickly and easily add new tasks on the go by clicking the orange add button located down in the
        right hand side corner of your sreeen.</string>
    <string name="about_text_label_2">A visually stunning To-Do list app</string>
    <string name="about_paragraph_2">Listd is a simple to-do list app that emphasises simplicity and ease of use. Whether you want a shopping list, grocery list or you
        just have lots of things to remember Listd is built for you.</string>
    <string name="about_text_label_3">Created by</string>
    <string name="about_paragraph_3">Najem Seddiqi &amp; Lucas Rosendahl</string>
    <string name="copyright">\u00A9 2019 Listd Inc.</string>
</resources>
