<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10.0"
    tools:context=".Views.UpdateTask">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_color_selector"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/cancelBtn"
            style="?android:attr/borderlessButtonStyle"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_chevron_left"
            android:minWidth="0dp"
            android:minHeight="0dp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_menu_kebab_white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="5dp"
            android:onClick="showPopup"
            android:src="@drawable/ic_menu_kebab_white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task"
            android:textColor="@color/colorWhite"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTxt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/edit_task_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9.0"
        android:background="@drawable/border_task_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:labelFor="@id/modifyTitleIInput"
            android:text="@string/edit_task_label"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/modifyTitleIInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autofillHints="no"
            android:background="@drawable/border_task_item"
            android:inputType="textPersonName|textCapSentences"
            android:maxLength="30"
            android:padding="20dp"
            android:text="@string/edit_task_title_input"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:labelFor="@id/modifyTaskInfoInput"
            android:text="@string/edit_task_info_label"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/modifyTaskInfoInput"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autofillHints="no"
            android:background="@drawable/border_task_item"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="20dp"
            android:scrollbars="vertical"
            android:text="@string/edit_task_info"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp">

            <RadioButton
                android:id="@+id/radioUnCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Uncompleted"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="244dp" />

            <RadioButton
                android:id="@+id/radioCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/completed"
                android:textColorLink="@color/colorBlack"
                android:textSize="16sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_border"
                android:drawableStart="@drawable/ic_update_icon"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp"
                android:text="@string/update_task"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/deleteBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_border"
                android:drawableStart="@drawable/ic_delete_icon"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp"
                android:text="@string/delete_task"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
