<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10.0"
    tools:context=".Views.AddTask">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_color_selector"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/cancelBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:drawableStart="@drawable/ic_chevron_left"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:background="?selectableItemBackgroundBorderless"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:drawableEnd="@drawable/ic_menu_kebab_white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="showPopup"
            android:src="@drawable/ic_menu_kebab_white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"
            android:textColor="@color/colorWhite"
            android:textSize="46sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9.0"
        android:background="@drawable/border_task_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:labelFor="@id/creationInputTitle"
            android:text="@string/add_task_label"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/creationInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autofillHints="no"
            android:background="@drawable/border_task_item"
            android:hint="@string/task_hint_title"
            android:inputType="textCapSentences"
            android:maxLength="30"
            android:padding="20dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:labelFor="@id/creationInputInfo"
            android:text="@string/add_task_info_label"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/creationInputInfo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autofillHints="no"
            android:background="@drawable/border_task_item"
            android:gravity="start"
            android:hint="@string/task_hint_info"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />


        <Button
            android:id="@+id/addBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_rounded_border"
            android:drawableStart="@drawable/ic_plus_symbol"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/add_task"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
