<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10.0"
    tools:context=".Views.Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_color_selector"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/cancelBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="5dp"
            android:background="?selectableItemBackgroundBorderless"
            android:drawableStart="@drawable/ic_chevron_left"
            android:minWidth="0dp"
            android:minHeight="0dp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:background="?selectableItemBackgroundBorderless"
            android:drawableEnd="@drawable/ic_menu_kebab_white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="showPopup"
            android:src="@drawable/ic_menu_kebab_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_h1"
            android:textColor="@color/colorWhite"
            android:textSize="46sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9.0"
        android:background="@drawable/border_task_container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:text="@string/enter_email_msg"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:lineHeight="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTxt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:labelFor="@id/emailinput"
            android:text="@string/settings_email_label"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/border_task_item"
            android:ems="10"
            android:hint="@string/hint_settings_email"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <Button
            android:id="@+id/enableEmailBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_border"
            android:drawableStart="@drawable/ic_email_notification_icon"
            android:enabled="false"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/button_enable"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>
